# slack-summariser

./: Makefile  README.md  pyproject.toml
slack_summarizer/: __main__.py  agent.py  connection.py  constants.py  modifiers.py
